--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="li-text">templates</li>
         </ul>
         <ul>
-          <li class="li-header">12m+</li>
+          <li class="li-header">12M+</li>
           <li class="li-text">queries</li>
         </ul>
 
